--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 *.class
 *.log
+
+# sbt specific
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/local-plugins.sbt
+.history
+.ensime
+.ensime_cache/
+.sbt-scripted/
+local.sbt
+
+# VS Code
+.vscode/
+# Metals
+.bloop/
+.metals/
+metals.sbt
