--- a/day04/dockerfile
+++ b/day04/dockerfile
@@ -22,8 +22,14 @@ WORKDIR /src
 COPY ./ .
 RUN sbt compile && sbt assembly
 
-
-FROM adoptopenjdk/openjdk8
+FROM ghcr.io/graalvm/graalvm-ce:latest as graal
+WORKDIR /src
+RUN gu install native-image
 COPY --from=compiled /src/target/scala-3.1.0/main.jar /main.jar
+RUN native-image --static --verbose --allow-incomplete-classpath --report-unsupported-elements-at-runtime --no-fallback --initialize-at-build-time -jar /main.jar app
+
+FROM alpine
+WORKDIR /src
+COPY --from=graal /src/app app
 COPY input.txt .
-CMD java -jar /main.jar
+CMD ./app
